--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  "config": path.resolve('./database/config', 'config.js'),
-  "models-path": path.resolve('./database/models'),
-  "seeders-path": path.resolve('./database/seeders'),
-  "migrations-path": path.resolve('./database/migrations')
+  'config': path.resolve('./api/src/config', 'config.js'),
+  'models-path': path.resolve('./api/src/models'),
+  'seeders-path': path.resolve('./api/src/seeders'),
+  'migrations-path': path.resolve('./api/src/migrations')
 };
