--- a/package.json
+++ b/package.json
@@ -1,39 +1,57 @@
 {
-  "name": "sequelize-with-postgres",
+  "name": "leaveapp-be",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "orie chinedu",
-  "license": "MIT",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "start-dev": "nodemon index.js",
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "seed": "npx sequelize db:seed:all",
     "migrate": "npx sequelize-cli db:migrate",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
-    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate && npm run seed",
     "pretest": "cross-env NODE_ENV=test npm run migrate:reset",
-    "coverage": "npm run pretest && jest --coverage && cat ./coverage/lcov.info | coveralls"
+    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./api/test --timeout 80000 --exit"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "verbose": true
-  },
+  "keywords": [],
+  "author": "Philip Ogunwobi",
+  "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^8.0.0",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.21.0",
+    "compression": "^1.7.4",
+    "concurrent": "^0.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^7.12.0",
+    "express-validator": "^6.4.1",
+    "fast-csv": "^4.3.6",
+    "html-pdf": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
+    "multer": "^1.4.2",
+    "node-pre-gyp": "^0.14.0",
+    "node-schedule": "^1.3.2",
+    "nodemailer": "4.7.0",
+    "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
+    "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.12.3",
-    "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba"
+    "pusher": "^3.0.1",
+    "replaceall": "^0.1.6",
+    "sequelize": "^6.5.0",
+    "sequelize-auto-migrations": "^1.0.3",
+    "sequelize-cli": "^6.2.0",
+    "swagger-jsdoc": "^5.0.0",
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "coveralls": "^3.0.6",
-    "cross-env": "^5.2.0",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.1",
-    "supertest": "^4.0.2"
+    "chai": "^4.2.0",
+    "cross-env": "^7.0.2",
+    "mocha": "^7.2.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
